feat(2):Background and position

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  <a>BookShop</a>
-  <app-list></app-list>
-  
+<div class = "flex-container ">
+  <div class = "title"> BookShop</div>
+    <div>  
+      <app-list></app-list>
+    </div>
+</div>
 </body>
 </html>
